--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,6 +30,7 @@ Imports:
   withr (>= 2.1.2)
 Suggests:
   digest (>= 0.6.25),
+  knitr (>= 1.28),
   rmarkdown (>= 2.1),
   testthat (>= 2.3.2)
 Remotes:
