--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,7 +8,7 @@ importFrom(fs,path_rel)
 importFrom(rlang,syms)
 importFrom(targets,tar_dir)
 importFrom(targets,tar_load)
-importFrom(targets,tar_option)
+importFrom(targets,tar_option_get)
 importFrom(targets,tar_read)
 importFrom(targets,tar_script)
 importFrom(targets,tar_target_raw)
