Implement tar_skip()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(tar_knit)
 export(tar_knit_run)
 export(tar_render)
 export(tar_render_run)
+export(tar_skip)
 importFrom(fs,path_rel)
 importFrom(rlang,sym)
 importFrom(rlang,syms)
