--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ importFrom(targets,tar_cue)
 importFrom(targets,tar_dir)
 importFrom(targets,tar_load)
 importFrom(targets,tar_option_get)
+importFrom(targets,tar_path)
 importFrom(targets,tar_read)
 importFrom(targets,tar_script)
 importFrom(targets,tar_target_raw)
