--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(tar_force)
 export(tar_force_change)
 export(tar_knit)
 export(tar_knit_run)
+export(tar_plan)
 export(tar_render)
 export(tar_render_run)
 export(tar_skip)
@@ -17,6 +18,7 @@ importFrom(targets,tar_dir)
 importFrom(targets,tar_load)
 importFrom(targets,tar_option_get)
 importFrom(targets,tar_path)
+importFrom(targets,tar_pipeline)
 importFrom(targets,tar_read)
 importFrom(targets,tar_script)
 importFrom(targets,tar_target_raw)
