--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(tar_force_change)
 export(tar_knit)
 export(tar_knit_run)
 export(tar_plan)
+export(tar_rds)
 export(tar_render)
 export(tar_render_run)
 export(tar_skip)
