--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -18,8 +18,9 @@ reference:
 - title: Help
   contents:
   - '`tarchetypes-package`'
-- title: Files
+- title: Formats
   contents:
+  - '`tar_formats`'
   - '`tar_files`'
 - title: Literate programming
   contents:
