--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,8 @@ export(tar_qs)
 export(tar_rds)
 export(tar_render)
 export(tar_render_run)
+export(tar_rep)
+export(tar_rep_raw)
 export(tar_skip)
 importFrom(fs,path_rel)
 importFrom(rlang,sym)
@@ -28,5 +30,8 @@ importFrom(targets,tar_path)
 importFrom(targets,tar_pipeline)
 importFrom(targets,tar_read)
 importFrom(targets,tar_script)
+importFrom(targets,tar_target)
 importFrom(targets,tar_target_raw)
+importFrom(vctrs,vec_c)
+importFrom(vctrs,vec_rbind)
 importFrom(withr,with_options)
