Finish sketching tar_rep()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(tar_render)
 export(tar_render_run)
 export(tar_rep)
 export(tar_rep_raw)
+export(tar_rep_run)
 export(tar_skip)
 importFrom(fs,path_rel)
 importFrom(rlang,sym)
