Preprocess tar_map() values

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,7 @@ export(tar_rep_raw)
 export(tar_rep_run)
 export(tar_skip)
 importFrom(fs,path_rel)
+importFrom(rlang,as_function)
 importFrom(rlang,sym)
 importFrom(rlang,syms)
 importFrom(targets,tar_cue)
