Add unlist arg to tar_map

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(num_range)
 export(one_of)
 export(starts_with)
 export(tar_change)
+export(tar_combine)
 export(tar_file)
 export(tar_files)
 export(tar_force)
