Finish sketching tar_combine()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(one_of)
 export(starts_with)
 export(tar_change)
 export(tar_combine)
+export(tar_combine_raw)
 export(tar_file)
 export(tar_files)
 export(tar_force)
