Import utils::globalVariables()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -57,6 +57,7 @@ importFrom(tidyselect,matches)
 importFrom(tidyselect,num_range)
 importFrom(tidyselect,one_of)
 importFrom(tidyselect,starts_with)
+importFrom(utils,globalVariables)
 importFrom(vctrs,vec_c)
 importFrom(vctrs,vec_rbind)
 importFrom(withr,with_options)
