--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -20,6 +20,7 @@ jobs:
       R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
       RSPM: ${{ matrix.config.rspm }}
       GITHUB_PAT: ${{ secrets.GITHUBPAT }}
+      R_REMOTES_NO_ERRORS_FROM_WARNINGS: false
 
     steps:
       - uses: actions/checkout@v2
