--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ export(tar_plan)
 export(tar_qs)
 export(tar_rds)
 export(tar_render)
+export(tar_render_raw)
 export(tar_render_run)
 export(tar_rep)
 export(tar_rep_raw)
