Implement tar_knit_raw()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(tar_fst_dt)
 export(tar_fst_tbl)
 export(tar_keras)
 export(tar_knit)
+export(tar_knit_raw)
 export(tar_knit_run)
 export(tar_map)
 export(tar_plan)
