--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -39,10 +39,11 @@ Suggests:
   digest (>= 0.6.25),
   knitr (>= 1.28),
   rmarkdown (>= 2.1),
-  testthat (>= 2.3.2)
+  testthat (>= 3.0.0)
 Remotes:
   wlandau/targets
 Encoding: UTF-8
 Language: en-US
+Config/testthat/edition: 3
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1.9000
