--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,6 +42,7 @@ importFrom(rlang,sym)
 importFrom(rlang,syms)
 importFrom(targets,tar_cue)
 importFrom(targets,tar_dir)
+importFrom(targets,tar_envir)
 importFrom(targets,tar_load)
 importFrom(targets,tar_option_get)
 importFrom(targets,tar_path)
