--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(tar_combine)
 export(tar_combine_raw)
 export(tar_file)
 export(tar_files)
+export(tar_files_raw)
 export(tar_force)
 export(tar_force_change)
 export(tar_fst)
