--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -34,11 +34,13 @@ reference:
   - '`tar_map`'
   - '`tar_rep`'
   - '`tar_rep_raw`'
-- title: Branching over files
+- title: Dynamic branching over files
   contents:
   - '`tar_files`'
   - '`tar_files_raw`'
-- title: Custom decision rules
+  - '`tar_files_input`'
+  - '`tar_files_input_raw`'
+- title: Custom cues
   contents:
   - '`tar_change`'
   - '`tar_force`'
