Implement tar_sub()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,6 +38,8 @@ export(tar_rep)
 export(tar_rep_raw)
 export(tar_rep_run)
 export(tar_skip)
+export(tar_sub)
+export(tar_sub_raw)
 export(tar_url)
 importFrom(fs,path_rel)
 importFrom(rlang,as_function)
