Fix docs and examples

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,8 @@ export(starts_with)
 export(tar_change)
 export(tar_combine)
 export(tar_combine_raw)
+export(tar_eval)
+export(tar_eval_raw)
 export(tar_file)
 export(tar_files)
 export(tar_files_input)
