--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -48,3 +48,9 @@ reference:
 - title: Pipeline archetypes
   contents:
   - '`tar_plan`'
+- title: Metaprogramming helpers
+  contents:
+  - '`tar_eval`'
+  - '`tar_eval_raw`'
+  - '`tar_sub`'
+  - '`tar_sub_raw`'
