--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,10 @@ export(tar_qs)
 export(tar_rds)
 export(tar_render)
 export(tar_render_raw)
+export(tar_render_rep)
+export(tar_render_rep_raw)
+export(tar_render_rep_run)
+export(tar_render_rep_run_params)
 export(tar_render_run)
 export(tar_rep)
 export(tar_rep_raw)
