Fix docs and deps

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,6 +47,8 @@ export(tar_skip)
 export(tar_sub)
 export(tar_sub_raw)
 export(tar_url)
+importFrom(digest,digest)
+importFrom(fs,path_ext_remove)
 importFrom(fs,path_rel)
 importFrom(rlang,as_function)
 importFrom(rlang,sym)
