--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,6 +28,7 @@ Authors@R: c(
 Depends:
   R (>= 3.5.0)
 Imports:
+  digest (>= 0.6.25),
   fs (>= 1.4.2),
   rlang (>= 0.4.7),
   targets (>= 0.0.0.9003),
@@ -39,7 +40,8 @@ Suggests:
   digest (>= 0.6.25),
   knitr (>= 1.28),
   rmarkdown (>= 2.1),
-  testthat (>= 3.0.0)
+  testthat (>= 3.0.0),
+  xml2 (>= 1.3.2)
 Remotes:
   wlandau/targets
 Encoding: UTF-8
