--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -24,6 +24,8 @@ reference:
   - '`tar_knit_raw`'
   - '`tar_render`'
   - '`tar_render_raw`'
+  - '`tar_render_rep`'
+  - '`tar_render_rep_raw`'
 - title: Formats
   contents:
   - '`tar_formats`'
