Use verbose codecov

--- a/.github/workflows/cover.yaml
+++ b/.github/workflows/cover.yaml
@@ -40,5 +40,5 @@ jobs:
         shell: Rscript {0}
 
       - name: Test coverage
-        run: covr::codecov()
+        run: covr::codecov(quiet = FALSE)
         shell: Rscript {0}
