--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,8 @@ export(tar_keras)
 export(tar_knit)
 export(tar_knit_raw)
 export(tar_knit_run)
+export(tar_knitr_deps)
+export(tar_knitr_deps_expr)
 export(tar_map)
 export(tar_plan)
 export(tar_qs)
