--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,8 +11,8 @@ Description: The 'targets' package is a pipeline toolkit that brings together
   by Will Landau (2018) <doi:10.21105/joss.00550>.
 Version: 0.0.0.9002
 License: MIT + file LICENSE
-URL: https://wlandau.github.io/tarchetypes/, https://github.com/wlandau/tarchetypes
-BugReports: https://github.com/wlandau/tarchetypes/issues
+URL: https://docs.ropensci.org/tarchetypes/, https://github.com/ropensci/tarchetypes
+BugReports: https://github.com/ropensci/tarchetypes/issues
 Authors@R: c(
   person(
     given = c("William", "Michael"),
@@ -42,7 +42,7 @@ Suggests:
   testthat (>= 3.0.0),
   xml2 (>= 1.3.2)
 Remotes:
-  wlandau/targets
+  ropensci/targets
 Encoding: UTF-8
 Language: en-US
 Config/testthat/edition: 3
