--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,6 +22,18 @@ Authors@R: c(
     comment = c(ORCID = "0000-0003-1878-3253")
   ),
   person(
+    given = "Samantha",
+    family = "Oliver",
+    role = "rev",
+    comment = c(ORCID = "0000-0001-5668-1165")
+  ),
+  person(
+    given = "Tristan",
+    family = "Mahr",
+    role = "rev",
+    comment = c(ORCID = "0000-0002-8890-5116")
+  ),
+  person(
     family = "Eli Lilly and Company",
     role = "cph"
   ))
