--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -52,6 +52,7 @@ Suggests:
   knitr (>= 1.28),
   rmarkdown (>= 2.1),
   testthat (>= 3.0.0),
+  tibble (>= 3.0.4),
   xml2 (>= 1.3.2)
 Remotes:
   ropensci/targets
