--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -5,7 +5,7 @@ contact_links:
     about: Chat about tarchetypes.
   - name: Help
     url: https://github.com/ropensci/tarchetypes/discussions/categories/help
-    about: Get help using tarchetypes and troubleshooting problems.
+    about: Ask questions and get help.
   - name: Ideas
     url: https://github.com/ropensci/tarchetypes/discussions/categories/ideas
     about: Brainstorm ideas for new features or use cases.
