Generalize code analysis a bit

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,8 @@
 export(all_of)
 export(any_of)
 export(contains)
+export(counter_init)
+export(counter_set_names)
 export(ends_with)
 export(everything)
 export(last_col)
@@ -49,6 +51,8 @@ export(tar_skip)
 export(tar_sub)
 export(tar_sub_raw)
 export(tar_url)
+export(walk_ast)
+export(walk_call_knitr)
 importFrom(digest,digest)
 importFrom(fs,path_ext_remove)
 importFrom(fs,path_rel)
