--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -49,6 +49,7 @@ Imports:
   vctrs (>= 0.3.4),
   withr (>= 2.1.2)
 Suggests:
+  dplyr (>= 1.0.0),
   knitr (>= 1.28),
   rmarkdown (>= 2.1),
   testthat (>= 3.0.0),
