Finish tar_group_by()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,8 @@ export(tar_force_change)
 export(tar_fst)
 export(tar_fst_dt)
 export(tar_fst_tbl)
+export(tar_group_by)
+export(tar_group_by_run)
 export(tar_keras)
 export(tar_knit)
 export(tar_knit_raw)
@@ -62,6 +64,7 @@ importFrom(rlang,syms)
 importFrom(targets,tar_cue)
 importFrom(targets,tar_dir)
 importFrom(targets,tar_envir)
+importFrom(targets,tar_group)
 importFrom(targets,tar_load)
 importFrom(targets,tar_option_get)
 importFrom(targets,tar_path)
