--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -21,9 +21,9 @@ reference:
 - title: Data frame grouping targets
   contents:
   - '`tar_group_by`'
+  - '`tar_group_count`'
   - '`tar_group_select`'
-  - '`tar_group_rep_count`'
-  - '`tar_group_rep_size`'
+  - '`tar_group_size`'
 - title: Literate programming targets
   contents:
   - '`tar_knit`'
