Implement tar_group_size()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,8 @@ export(tar_group_by)
 export(tar_group_by_run)
 export(tar_group_select)
 export(tar_group_select_run)
+export(tar_group_size)
+export(tar_group_size_run)
 export(tar_keras)
 export(tar_knit)
 export(tar_knit_raw)
