--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,8 @@ export(tar_fst_dt)
 export(tar_fst_tbl)
 export(tar_group_by)
 export(tar_group_by_run)
+export(tar_group_count)
+export(tar_group_count_run)
 export(tar_group_select)
 export(tar_group_select_run)
 export(tar_group_size)
