Unset crayon.enabled for literate programming

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -92,4 +92,5 @@ importFrom(tidyselect,starts_with)
 importFrom(utils,globalVariables)
 importFrom(vctrs,vec_c)
 importFrom(vctrs,vec_rbind)
+importFrom(withr,local_options)
 importFrom(withr,with_options)
