Rethink rlang usage

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -65,8 +65,9 @@ importFrom(digest,digest)
 importFrom(fs,path_ext_remove)
 importFrom(fs,path_rel)
 importFrom(rlang,as_function)
-importFrom(rlang,sym)
-importFrom(rlang,syms)
+importFrom(rlang,enquo)
+importFrom(rlang,expr)
+importFrom(rlang,quo_squash)
 importFrom(targets,tar_cue)
 importFrom(targets,tar_dir)
 importFrom(targets,tar_envir)
