Use check_installed()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -65,6 +65,7 @@ importFrom(digest,digest)
 importFrom(fs,path_ext_remove)
 importFrom(fs,path_rel)
 importFrom(rlang,as_function)
+importFrom(rlang,check_installed)
 importFrom(rlang,enquo)
 importFrom(rlang,expr)
 importFrom(rlang,quo_squash)
