--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,11 +12,22 @@ export(matches)
 export(num_range)
 export(one_of)
 export(starts_with)
+export(tar_aws_feather)
+export(tar_aws_file)
+export(tar_aws_fst)
+export(tar_aws_fst_dt)
+export(tar_aws_fst_tbl)
+export(tar_aws_keras)
+export(tar_aws_parquet)
+export(tar_aws_qs)
+export(tar_aws_rds)
+export(tar_aws_torch)
 export(tar_change)
 export(tar_combine)
 export(tar_combine_raw)
 export(tar_eval)
 export(tar_eval_raw)
+export(tar_feather)
 export(tar_file)
 export(tar_files)
 export(tar_files_input)
@@ -42,6 +53,7 @@ export(tar_knit_run)
 export(tar_knitr_deps)
 export(tar_knitr_deps_expr)
 export(tar_map)
+export(tar_parquet)
 export(tar_plan)
 export(tar_qs)
 export(tar_rds)
@@ -58,6 +70,7 @@ export(tar_rep_run)
 export(tar_skip)
 export(tar_sub)
 export(tar_sub_raw)
+export(tar_torch)
 export(tar_url)
 export(walk_ast)
 export(walk_call_knitr)
