Change a format helper name

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,7 +27,6 @@ export(tar_combine)
 export(tar_combine_raw)
 export(tar_eval)
 export(tar_eval_raw)
-export(tar_feather)
 export(tar_file)
 export(tar_files)
 export(tar_files_input)
@@ -35,6 +34,7 @@ export(tar_files_input_raw)
 export(tar_files_raw)
 export(tar_force)
 export(tar_force_change)
+export(tar_format_feather)
 export(tar_fst)
 export(tar_fst_dt)
 export(tar_fst_tbl)
