Change name of new helper

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,7 +12,6 @@ export(matches)
 export(num_range)
 export(one_of)
 export(starts_with)
-export(tar_aws_feather)
 export(tar_aws_file)
 export(tar_aws_fst)
 export(tar_aws_fst_dt)
@@ -34,6 +33,7 @@ export(tar_files_input_raw)
 export(tar_files_raw)
 export(tar_force)
 export(tar_force_change)
+export(tar_format_aws_feather)
 export(tar_format_feather)
 export(tar_fst)
 export(tar_fst_dt)
