--- a/NAMESPACE
+++ b/NAMESPACE
@@ -75,6 +75,7 @@ export(tar_url)
 export(walk_ast)
 export(walk_call_knitr)
 importFrom(digest,digest)
+importFrom(fs,dir_create)
 importFrom(fs,path_ext_remove)
 importFrom(fs,path_rel)
 importFrom(rlang,as_function)
