--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,8 @@ export(tar_aws_torch)
 export(tar_change)
 export(tar_combine)
 export(tar_combine_raw)
+export(tar_download)
+export(tar_download_run)
 export(tar_eval)
 export(tar_eval_raw)
 export(tar_file)
@@ -105,6 +107,7 @@ importFrom(tidyselect,matches)
 importFrom(tidyselect,num_range)
 importFrom(tidyselect,one_of)
 importFrom(tidyselect,starts_with)
+importFrom(utils,download.file)
 importFrom(utils,globalVariables)
 importFrom(vctrs,vec_c)
 importFrom(vctrs,vec_rbind)
