--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(tar_aws_torch)
 export(tar_change)
 export(tar_combine)
 export(tar_combine_raw)
+export(tar_cue_force)
 export(tar_download)
 export(tar_download_run)
 export(tar_eval)
