Implement tar_cue_skip()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(tar_change)
 export(tar_combine)
 export(tar_combine_raw)
 export(tar_cue_force)
+export(tar_cue_skip)
 export(tar_download)
 export(tar_download_run)
 export(tar_eval)
