--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,8 @@ export(tar_aws_torch)
 export(tar_change)
 export(tar_combine)
 export(tar_combine_raw)
+export(tar_cue_age)
+export(tar_cue_age_raw)
 export(tar_cue_force)
 export(tar_cue_skip)
 export(tar_download)
@@ -90,8 +92,10 @@ importFrom(rlang,quo_squash)
 importFrom(targets,tar_cue)
 importFrom(targets,tar_dir)
 importFrom(targets,tar_envir)
+importFrom(targets,tar_exist_meta)
 importFrom(targets,tar_group)
 importFrom(targets,tar_load)
+importFrom(targets,tar_meta)
 importFrom(targets,tar_option_get)
 importFrom(targets,tar_path)
 importFrom(targets,tar_read)
@@ -99,6 +103,7 @@ importFrom(targets,tar_script)
 importFrom(targets,tar_target)
 importFrom(targets,tar_target_raw)
 importFrom(targets,tar_test)
+importFrom(targets,tar_timestamp_raw)
 importFrom(tidyselect,all_of)
 importFrom(tidyselect,any_of)
 importFrom(tidyselect,contains)
