--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(matches)
 export(num_range)
 export(one_of)
 export(starts_with)
+export(tar_age)
 export(tar_aws_file)
 export(tar_aws_fst)
 export(tar_aws_fst_dt)
