--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,6 +53,7 @@ export(tar_group_select)
 export(tar_group_select_run)
 export(tar_group_size)
 export(tar_group_size_run)
+export(tar_hook_first)
 export(tar_keras)
 export(tar_knit)
 export(tar_knit_raw)
@@ -89,6 +90,7 @@ importFrom(rlang,as_function)
 importFrom(rlang,check_installed)
 importFrom(rlang,enquo)
 importFrom(rlang,expr)
+importFrom(rlang,is_missing)
 importFrom(rlang,quo_squash)
 importFrom(targets,tar_cue)
 importFrom(targets,tar_dir)
