--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,7 +53,7 @@ export(tar_group_select)
 export(tar_group_select_run)
 export(tar_group_size)
 export(tar_group_size_run)
-export(tar_hook_first)
+export(tar_hook_before)
 export(tar_keras)
 export(tar_knit)
 export(tar_knit_raw)
