Start inner hook

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -54,6 +54,7 @@ export(tar_group_select_run)
 export(tar_group_size)
 export(tar_group_size_run)
 export(tar_hook_before)
+export(tar_hook_inner)
 export(tar_hook_outer)
 export(tar_keras)
 export(tar_knit)
