Standardize command arg processing

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -76,6 +76,7 @@ export(tar_render_rep_run_params)
 export(tar_render_run)
 export(tar_rep)
 export(tar_rep_map)
+export(tar_rep_map_raw)
 export(tar_rep_raw)
 export(tar_rep_run)
 export(tar_skip)
