Support limited scope tar_rep_map()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -70,9 +70,6 @@ export(tar_knit_run)
 export(tar_knitr_deps)
 export(tar_knitr_deps_expr)
 export(tar_map)
-export(tar_map_reps)
-export(tar_map_reps_raw)
-export(tar_map_reps_run)
 export(tar_parquet)
 export(tar_plan)
 export(tar_qs)
@@ -85,6 +82,9 @@ export(tar_render_rep_run)
 export(tar_render_rep_run_params)
 export(tar_render_run)
 export(tar_rep)
+export(tar_rep_map)
+export(tar_rep_map_raw)
+export(tar_rep_map_run)
 export(tar_rep_raw)
 export(tar_rep_run)
 export(tar_skip)
