Implement tar_select_names() and tar_select_targets()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -87,6 +87,8 @@ export(tar_rep_map_raw)
 export(tar_rep_map_run)
 export(tar_rep_raw)
 export(tar_rep_run)
+export(tar_select_names)
+export(tar_select_targets)
 export(tar_skip)
 export(tar_sub)
 export(tar_sub_raw)
