--- a/NAMESPACE
+++ b/NAMESPACE
@@ -106,7 +106,46 @@ importFrom(rlang,enquo)
 importFrom(rlang,expr)
 importFrom(rlang,is_missing)
 importFrom(rlang,quo_squash)
+importFrom(targets,tar_assert_chr)
+importFrom(targets,tar_assert_dbl)
+importFrom(targets,tar_assert_df)
+importFrom(targets,tar_assert_envir)
+importFrom(targets,tar_assert_equal_lengths)
+importFrom(targets,tar_assert_expr)
+importFrom(targets,tar_assert_flag)
+importFrom(targets,tar_assert_function)
+importFrom(targets,tar_assert_ge)
+importFrom(targets,tar_assert_identical)
+importFrom(targets,tar_assert_in)
+importFrom(targets,tar_assert_inherits)
+importFrom(targets,tar_assert_int)
+importFrom(targets,tar_assert_internet)
+importFrom(targets,tar_assert_lang)
+importFrom(targets,tar_assert_le)
+importFrom(targets,tar_assert_lgl)
+importFrom(targets,tar_assert_list)
+importFrom(targets,tar_assert_match)
+importFrom(targets,tar_assert_name)
+importFrom(targets,tar_assert_names)
+importFrom(targets,tar_assert_nonempty)
+importFrom(targets,tar_assert_nonmissing)
+importFrom(targets,tar_assert_not_dir)
+importFrom(targets,tar_assert_not_dirs)
+importFrom(targets,tar_assert_not_expr)
+importFrom(targets,tar_assert_not_in)
+importFrom(targets,tar_assert_nzchar)
+importFrom(targets,tar_assert_package)
+importFrom(targets,tar_assert_path)
+importFrom(targets,tar_assert_positive)
+importFrom(targets,tar_assert_scalar)
+importFrom(targets,tar_assert_target)
+importFrom(targets,tar_assert_target_list)
+importFrom(targets,tar_assert_true)
+importFrom(targets,tar_assert_unique)
+importFrom(targets,tar_assert_unique_targets)
 importFrom(targets,tar_cue)
+importFrom(targets,tar_deparse_language)
+importFrom(targets,tar_deparse_safe)
 importFrom(targets,tar_dir)
 importFrom(targets,tar_envir)
 importFrom(targets,tar_exist_meta)
@@ -120,7 +159,10 @@ importFrom(targets,tar_script)
 importFrom(targets,tar_target)
 importFrom(targets,tar_target_raw)
 importFrom(targets,tar_test)
+importFrom(targets,tar_throw_validate)
+importFrom(targets,tar_tidy_eval)
 importFrom(targets,tar_timestamp_raw)
+importFrom(targets,tar_warn_validate)
 importFrom(tidyselect,all_of)
 importFrom(tidyselect,any_of)
 importFrom(tidyselect,contains)
