--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -44,6 +44,7 @@ Imports:
   fs (>= 1.4.2),
   rlang (>= 0.4.7),
   targets (>= 0.6.0),
+  tibble (>= 3.0.1),
   tidyselect (>= 1.1.0),
   utils,
   vctrs (>= 0.3.4),
