--- a/NAMESPACE
+++ b/NAMESPACE
@@ -162,6 +162,7 @@ importFrom(targets,tar_test)
 importFrom(targets,tar_throw_validate)
 importFrom(targets,tar_tidy_eval)
 importFrom(targets,tar_warn_validate)
+importFrom(tibble,as_tibble)
 importFrom(tidyselect,all_of)
 importFrom(tidyselect,any_of)
 importFrom(tidyselect,contains)
