Inform users of #67

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -104,6 +104,7 @@ importFrom(rlang,as_function)
 importFrom(rlang,check_installed)
 importFrom(rlang,enquo)
 importFrom(rlang,expr)
+importFrom(rlang,inform)
 importFrom(rlang,is_missing)
 importFrom(rlang,quo_squash)
 importFrom(targets,tar_assert_chr)
