--- a/.github/workflows/cover.yaml
+++ b/.github/workflows/cover.yaml
@@ -6,7 +6,7 @@ jobs:
   cover:
     runs-on: macOS-latest
     env:
-      GITHUB_PAT: ${{ secrets.GITHUBPAT }}
+      GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
       R_REMOTES_NO_ERRORS_FROM_WARNINGS: false
     steps:
       - uses: actions/checkout@v2
