--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(num_range)
 export(one_of)
 export(starts_with)
 export(tar_age)
+export(tar_append_static_values)
 export(tar_aws_file)
 export(tar_aws_fst)
 export(tar_aws_fst_dt)
@@ -86,6 +87,8 @@ export(tar_rep_map)
 export(tar_rep_map_raw)
 export(tar_rep_map_run)
 export(tar_rep_raw)
+export(tar_rep_row)
+export(tar_rep_row_raw)
 export(tar_rep_run)
 export(tar_select_names)
 export(tar_select_targets)
