Rename new functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -71,6 +71,8 @@ export(tar_knit_run)
 export(tar_knitr_deps)
 export(tar_knitr_deps_expr)
 export(tar_map)
+export(tar_map_rep)
+export(tar_map_rep_raw)
 export(tar_parquet)
 export(tar_plan)
 export(tar_qs)
@@ -87,8 +89,6 @@ export(tar_rep_map)
 export(tar_rep_map_raw)
 export(tar_rep_map_run)
 export(tar_rep_raw)
-export(tar_rep_row)
-export(tar_rep_row_raw)
 export(tar_rep_run)
 export(tar_select_names)
 export(tar_select_targets)
