--- a/NAMESPACE
+++ b/NAMESPACE
@@ -100,10 +100,14 @@ export(tar_url)
 export(walk_ast)
 export(walk_call_knitr)
 importFrom(digest,digest)
+importFrom(dplyr,bind_rows)
+importFrom(dplyr,mutate)
+importFrom(dplyr,select)
 importFrom(fs,dir_create)
 importFrom(fs,path_ext_remove)
 importFrom(fs,path_rel)
 importFrom(rlang,as_function)
+importFrom(rlang,call2)
 importFrom(rlang,check_installed)
 importFrom(rlang,enquo)
 importFrom(rlang,expr)
