move tar_rep_map() to tar_rep2()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -85,9 +85,11 @@ export(tar_render_rep_run)
 export(tar_render_rep_run_params)
 export(tar_render_run)
 export(tar_rep)
+export(tar_rep2)
+export(tar_rep2_raw)
+export(tar_rep2_run)
 export(tar_rep_map)
 export(tar_rep_map_raw)
-export(tar_rep_map_run)
 export(tar_rep_raw)
 export(tar_rep_run)
 export(tar_select_names)
