--- a/NAMESPACE
+++ b/NAMESPACE
@@ -171,6 +171,7 @@ importFrom(targets,tar_target_raw)
 importFrom(targets,tar_test)
 importFrom(targets,tar_throw_validate)
 importFrom(targets,tar_tidy_eval)
+importFrom(targets,tar_warn_deprecate)
 importFrom(targets,tar_warn_validate)
 importFrom(tibble,as_tibble)
 importFrom(tidyselect,all_of)
