--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -70,6 +70,11 @@ jobs:
           remotes::install_cran("rcmdcheck")
         shell: Rscript {0}
 
+      - name: Mac arrow
+        if: runner.os == 'macOS'
+        run: install.packages("arrow", type = "source")
+        shell: Rscript {0}
+
       - name: Check
         env:
           _R_CHECK_CRAN_INCOMING_REMOTE_: false
