Sketch tar_map2()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -71,6 +71,8 @@ export(tar_knit_run)
 export(tar_knitr_deps)
 export(tar_knitr_deps_expr)
 export(tar_map)
+export(tar_map2_group)
+export(tar_map2_run)
 export(tar_map_rep)
 export(tar_map_rep_raw)
 export(tar_parquet)
