--- a/NAMESPACE
+++ b/NAMESPACE
@@ -56,6 +56,7 @@ export(tar_fst_tbl)
 export(tar_group_by)
 export(tar_group_by_run)
 export(tar_group_count)
+export(tar_group_count_index)
 export(tar_group_count_run)
 export(tar_group_select)
 export(tar_group_select_run)
@@ -71,6 +72,7 @@ export(tar_knit_run)
 export(tar_knitr_deps)
 export(tar_knitr_deps_expr)
 export(tar_map)
+export(tar_map2_count)
 export(tar_map2_group)
 export(tar_map2_run)
 export(tar_map_rep)
