tar_map2_count()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -73,6 +73,7 @@ export(tar_knitr_deps)
 export(tar_knitr_deps_expr)
 export(tar_map)
 export(tar_map2_count)
+export(tar_map2_count_raw)
 export(tar_map2_group)
 export(tar_map2_run)
 export(tar_map_rep)
