--- a/NAMESPACE
+++ b/NAMESPACE
@@ -61,6 +61,7 @@ export(tar_group_count_run)
 export(tar_group_select)
 export(tar_group_select_run)
 export(tar_group_size)
+export(tar_group_size_index)
 export(tar_group_size_run)
 export(tar_hook_before)
 export(tar_hook_inner)
@@ -76,6 +77,8 @@ export(tar_map2_count)
 export(tar_map2_count_raw)
 export(tar_map2_group)
 export(tar_map2_run)
+export(tar_map2_size)
+export(tar_map2_size_raw)
 export(tar_map_rep)
 export(tar_map_rep_raw)
 export(tar_parquet)
