--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -38,25 +38,34 @@ reference:
   - '`tar_combine`'
   - '`tar_combine_raw`'
   - '`tar_map`'
-  - '`tar_map_rep`'
-  - '`tar_map_rep_raw`'
-- title: Dynamic grouped data frame targets
-  contents:
-  - '`tar_group_by`'
-  - '`tar_group_count`'
-  - '`tar_group_select`'
-  - '`tar_group_size`'
-- title: Dynamic batched replication
-  - '`tar_rep`'
-  - '`tar_rep_raw`'
-  - '`tar_rep2`'
-  - '`tar_rep2_raw`'
 - title: Dynamic branching over files
   contents:
   - '`tar_files`'
   - '`tar_files_raw`'
   - '`tar_files_input`'
   - '`tar_files_input_raw`'
+- title: Dynamic grouped data frames
+  contents:
+  - '`tar_group_by`'
+  - '`tar_group_count`'
+  - '`tar_group_select`'
+  - '`tar_group_size`'
+- title: Dynamic batched replication
+  contents:
+  - '`tar_rep`'
+  - '`tar_rep_raw`'
+  - '`tar_rep2`'
+  - '`tar_rep2_raw`'
+- title: Dynamic batched replication within static branches for data frames
+  contents:
+  - '`tar_map_rep`'
+  - '`tar_map_rep_raw`'
+- title: Batched dynamic-within-static branching for data frames
+  contents:
+  - '`tar_map2_count`'
+  - '`tar_map2_count_raw`'
+  - '`tar_map2_size`'
+  - '`tar_map2_size_raw`'
 - title: Target selection
   contents:
   - '`tar_select_names`'
@@ -85,6 +94,6 @@ reference:
   - '`tar_eval_raw`'
   - '`tar_sub`'
   - '`tar_sub_raw`'
-- title: DSLs
+- title: Domain-specific languages for pipeline construction
   contents:
   - '`tar_plan`'
