--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -22,6 +22,10 @@ reference:
   contents:
   - '`tar_knit`'
   - '`tar_knit_raw`'
+  - '`tar_quarto`'
+  - '`tar_quarto_raw`'
+  - '`tar_quarto_rep`'
+  - '`tar_quarto_rep_raw`'
   - '`tar_render`'
   - '`tar_render_raw`'
   - '`tar_render_rep`'
