--- a/NAMESPACE
+++ b/NAMESPACE
@@ -85,6 +85,10 @@ export(tar_map_rep_raw)
 export(tar_parquet)
 export(tar_plan)
 export(tar_qs)
+export(tar_quarto)
+export(tar_quarto_raw)
+export(tar_quarto_run)
+export(tar_quarto_sources)
 export(tar_rds)
 export(tar_render)
 export(tar_render_raw)
