Sketch dynamically branched quarto target factories

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -87,6 +87,10 @@ export(tar_plan)
 export(tar_qs)
 export(tar_quarto)
 export(tar_quarto_raw)
+export(tar_quarto_rep)
+export(tar_quarto_rep_raw)
+export(tar_quarto_rep_run)
+export(tar_quarto_rep_run_params)
 export(tar_quarto_run)
 export(tar_quarto_sources)
 export(tar_rds)
