--- a/NAMESPACE
+++ b/NAMESPACE
@@ -86,13 +86,13 @@ export(tar_parquet)
 export(tar_plan)
 export(tar_qs)
 export(tar_quarto)
+export(tar_quarto_files)
 export(tar_quarto_raw)
 export(tar_quarto_rep)
 export(tar_quarto_rep_raw)
 export(tar_quarto_rep_run)
 export(tar_quarto_rep_run_params)
 export(tar_quarto_run)
-export(tar_quarto_sources)
 export(tar_rds)
 export(tar_render)
 export(tar_render_raw)
@@ -123,6 +123,7 @@ importFrom(dplyr,bind_rows)
 importFrom(dplyr,mutate)
 importFrom(dplyr,select)
 importFrom(fs,dir_create)
+importFrom(fs,is_dir)
 importFrom(fs,path_ext_remove)
 importFrom(fs,path_rel)
 importFrom(rlang,as_function)
