--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -34,6 +34,7 @@ reference:
   contents:
   - '`tar_knitr_deps`'
   - '`tar_knitr_deps_expr`'
+  - '`tar_quarto_files`'
 - title: Formats
   contents:
   - '`tar_formats`'
