--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -26,12 +26,11 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-
       - uses: r-lib/actions/setup-r@master
         with:
           r-version: ${{ matrix.config.r }}
-
       - uses: r-lib/actions/setup-pandoc@master
+      - uses: quarto-dev/quarto-actions/setup@v2
 
       - name: Query dependencies
         run: |
