--- a/.github/workflows/cover.yaml
+++ b/.github/workflows/cover.yaml
@@ -10,10 +10,9 @@ jobs:
       R_REMOTES_NO_ERRORS_FROM_WARNINGS: false
     steps:
       - uses: actions/checkout@v2
-
       - uses: r-lib/actions/setup-r@master
-
       - uses: r-lib/actions/setup-pandoc@master
+      - uses: quarto-dev/quarto-actions/setup@v2
 
       - name: Query dependencies
         run: |
