Document: only use first file format in tar_quarto_rep()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -124,7 +124,9 @@ importFrom(dplyr,mutate)
 importFrom(dplyr,select)
 importFrom(fs,dir_create)
 importFrom(fs,is_dir)
+importFrom(fs,path_ext)
 importFrom(fs,path_ext_remove)
+importFrom(fs,path_ext_set)
 importFrom(fs,path_rel)
 importFrom(rlang,as_function)
 importFrom(rlang,call2)
@@ -204,6 +206,7 @@ importFrom(tidyselect,one_of)
 importFrom(tidyselect,starts_with)
 importFrom(utils,download.file)
 importFrom(utils,globalVariables)
+importFrom(utils,head)
 importFrom(vctrs,vec_c)
 importFrom(vctrs,vec_rbind)
 importFrom(withr,local_options)
