--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -62,7 +62,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          remotes::install_deps(dependencies = TRUE)
+          remotes::install_deps(dependencies = TRUE, type = ifelse(tolower(Sys.info()["sysname"]) == "linux", "source", "binary"))
           install.packages("knitr")
           remotes::install_github("ropensci/targets")
           remotes::install_cran("rcmdcheck")
