tar_rep() resilient seeds

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -119,6 +119,7 @@ export(tar_url)
 export(walk_ast)
 export(walk_call_knitr)
 importFrom(digest,digest)
+importFrom(digest,digest2int)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,mutate)
 importFrom(dplyr,select)
@@ -210,4 +211,5 @@ importFrom(utils,head)
 importFrom(vctrs,vec_c)
 importFrom(vctrs,vec_rbind)
 importFrom(withr,local_options)
+importFrom(withr,local_seed)
 importFrom(withr,with_options)
