import targets::tar_definition()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -175,6 +175,7 @@ importFrom(targets,tar_assert_true)
 importFrom(targets,tar_assert_unique)
 importFrom(targets,tar_assert_unique_targets)
 importFrom(targets,tar_cue)
+importFrom(targets,tar_definition)
 importFrom(targets,tar_deparse_language)
 importFrom(targets,tar_deparse_safe)
 importFrom(targets,tar_dir)
