Incorporate tar_option_get("seed")

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -185,6 +185,7 @@ importFrom(targets,tar_group)
 importFrom(targets,tar_load)
 importFrom(targets,tar_meta)
 importFrom(targets,tar_option_get)
+importFrom(targets,tar_option_set)
 importFrom(targets,tar_read)
 importFrom(targets,tar_runtime_object)
 importFrom(targets,tar_script)
