--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -43,6 +43,7 @@ Imports:
   digest (>= 0.6.25),
   dplyr (>= 1.0.0),
   fs (>= 1.4.2),
+  furrr (>= 0.3.0),
   rlang (>= 0.4.7),
   targets (>= 0.11.0),
   tibble (>= 3.0.1),
