--- a/NAMESPACE
+++ b/NAMESPACE
@@ -78,6 +78,7 @@ export(tar_map2_count)
 export(tar_map2_count_raw)
 export(tar_map2_group)
 export(tar_map2_run)
+export(tar_map2_run_rep)
 export(tar_map2_size)
 export(tar_map2_size_raw)
 export(tar_map_rep)
@@ -90,6 +91,7 @@ export(tar_quarto_files)
 export(tar_quarto_raw)
 export(tar_quarto_rep)
 export(tar_quarto_rep_raw)
+export(tar_quarto_rep_rep)
 export(tar_quarto_rep_run)
 export(tar_quarto_rep_run_params)
 export(tar_quarto_run)
@@ -98,6 +100,7 @@ export(tar_render)
 export(tar_render_raw)
 export(tar_render_rep)
 export(tar_render_rep_raw)
+export(tar_render_rep_rep)
 export(tar_render_rep_run)
 export(tar_render_rep_run_params)
 export(tar_render_run)
@@ -109,6 +112,7 @@ export(tar_rep_map)
 export(tar_rep_map_raw)
 export(tar_rep_raw)
 export(tar_rep_run)
+export(tar_rep_run_map_rep)
 export(tar_select_names)
 export(tar_select_targets)
 export(tar_skip)
@@ -131,6 +135,7 @@ importFrom(fs,path_ext_set)
 importFrom(fs,path_rel)
 importFrom(furrr,furrr_options)
 importFrom(furrr,future_map)
+importFrom(furrr,future_map2)
 importFrom(rlang,as_function)
 importFrom(rlang,call2)
 importFrom(rlang,check_installed)
