--- a/NAMESPACE
+++ b/NAMESPACE
@@ -108,6 +108,7 @@ export(tar_rep)
 export(tar_rep2)
 export(tar_rep2_raw)
 export(tar_rep2_run)
+export(tar_rep2_run_rep)
 export(tar_rep_map)
 export(tar_rep_map_raw)
 export(tar_rep_raw)
@@ -136,6 +137,8 @@ importFrom(fs,path_rel)
 importFrom(furrr,furrr_options)
 importFrom(furrr,future_map)
 importFrom(furrr,future_map2)
+importFrom(future,plan)
+importFrom(future.callr,callr)
 importFrom(rlang,as_function)
 importFrom(rlang,call2)
 importFrom(rlang,check_installed)
