--- a/NAMESPACE
+++ b/NAMESPACE
@@ -196,6 +196,7 @@ importFrom(targets,tar_load)
 importFrom(targets,tar_meta)
 importFrom(targets,tar_option_get)
 importFrom(targets,tar_option_set)
+importFrom(targets,tar_path_target)
 importFrom(targets,tar_read)
 importFrom(targets,tar_runtime_object)
 importFrom(targets,tar_script)
