--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,14 +1,8 @@
-lank_issues_enabled: true
+blank_issues_enabled: false
 contact_links:
-  - name: General
-    url: https://github.com/ropensci/tarchetypes/discussions/categories/general
-    about: Chat about tarchetypes.
-  - name: Help
-    url: https://github.com/ropensci/tarchetypes/discussions/categories/help
-    about: Ask questions and get help.
-  - name: Ideas
-    url: https://github.com/ropensci/tarchetypes/discussions/categories/ideas
-    about: Brainstorm ideas for new features or use cases.
-  - name: Show and tell
-    url: https://github.com/ropensci/tarchetypes/discussions/categories/show-and-tell
-    about: Show off something you have made.
+  - name: How to ask for help. Please read first.
+    url: https://books.ropensci.org/targets/help.html
+    about: This page explains how and where to write questions about specific issues.
+  - name: Discussions
+    url: https://github.com/ropensci/tarchetypes/discussions
+    about: Ask for help or propose an idea.
