Minor DESCRIPTION edit

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: tarchetypes
 Title: Archetypes for Targets
-Description: Function-oriented Make-like declarative workflows for
+Description: Function-oriented Make-like declarative pipelines for
   Statistics and data science are supported in the 'targets' R package.
   As an extension to 'targets', the 'tarchetypes' package provides
   convenient user-side functions to make 'targets' easier to use.
   By establishing reusable archetypes for common kinds of
   targets and pipelines, these functions help express complicated
-  reproducible workflows concisely and compactly.
+  reproducible pipelines concisely and compactly.
   The methods in this package were influenced by the 'drake' R package
   by Will Landau (2018) <doi:10.21105/joss.00550>.
 Version: 0.7.3.9000
